# multicode

./: .flake8  .gitignore  LICENSE  README.md  coarse_scale_basis.py  conda-lock.yml  decompose_vectorarray.py  dodo.py  dofmap.py  empirical_basis.py  env.yaml  env.yml  generate_basis.py  generate_hierarchical_basis.py  homogenization.py  preprocessing_strategy.md  pyproject.toml  pyrightconfig.json  quadrilateral.py
multi/: README.md  env.yaml  env_from_history.yaml  pyproject.toml  setup.py
multi/multi/: __init__.py  assembly.py  basis_construction.py  basis_loader.py  bcs.py  boundary.py  discr.py  dofmap.py  domain.py  extension.py  interpolation.py  io.py  linear_elasticity.py  materials.py  misc.py  oversampling.py  pdiercks_multi.mplstyle  plotting_context.py  postprocessing.py  preprocessing.py  problems.py  product.py  projection.py  pymor_defaults.py  range_finder.py  sampling.py  shapes.py  solutions.py  solver.py  todo.txt  transfer_operator.py
multi/test/: domain.msh  helpers.py  test_StructuredGrid_.py  test_StructuredGrid_create_fine_grid.py  test_apply_bcs.py  test_bases_loader.py  test_bcs.py  test_bcs_get_boundary_dofs.py  test_boundary_data_factory.py  test_boundary_plane_at.py  test_boundary_point_at.py  test_boundary_within_range.py  test_create_line_grid.py  test_create_rce_grid_01.py  test_create_rce_grid_02.py  test_create_rectangle_grid.py  test_dirichlet_bcs.py  test_dirichlet_online.py  test_discretize_block.py  test_dofmap.py  test_dofmapx.py  test_domain.py  test_edge_spaces.py  test_extension.py  test_fom_interpolation.py  test_mpirun.py  (+30 more)
(+209 files in other folders)
